tests/sksl/errors/ReservedNamePublic.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'public'
1 error
